<resources>
    <string name="app_name">SpaceNoteV2</string>
    <string name="my_note">My Note</string>
    <string name="search_notes">Search notes</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_her">Type note her..</string>
    <string name="note_title">Note Title</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add image</string>
</resources>