<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginBottom="@dimen/_105sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcon" />

            <ImageView
                android:id="@+id/imageViewSaveNote"
                android:layout_width="@dimen/_20ssp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/backgroud_done_button"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/imageViewBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageViewBack"
                app:tint="@color/colorIcon" />

            <EditText
                android:id="@+id/editTextNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                app:layout_constraintTop_toBottomOf="@id/imageViewBack" />


            <TextView
                android:id="@+id/textViewDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcon"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/editTextNoteTitle"
                app:layout_constraintStart_toStartOf="@+id/editTextNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/editTextNoteTitle" />

            <EditText
                android:id="@+id/editTextNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colorTextSubTitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@+id/textViewDateTime" />

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/backround_subtitle_indictor"
                app:layout_constraintBottom_toBottomOf="@id/editTextNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextNoteSubtitle" />

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/editTextNoteSubtitle"/>

            <EditText
                android:id="@+id/editTextNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/type_note_her"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageNote"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/noteColors"
        layout="@layout/layout_miscellaneous"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>